# PresetPreferenceGenerator

./: .gitignore  CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GA/: AudioFeatureCache.cpp  AudioFeatureCache.h  CrossoverOperators.cpp  CrossoverOperators.h  DummyFitnessModel.cpp  DummyFitnessModel.h  FeatureExtractor.cpp  FeatureExtractor.h  FitnessEvaluator.cpp  FitnessEvaluator.h  GAConfig.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GenomeConstraints.cpp  GenomeConstraints.h  HeadlessSynth.cpp  IFitnessModel.h  Individual.cpp  Individual.h  MLP.cpp  MLP.h  MLPPreferenceModel.cpp  MLPPreferenceModel.h  MutationOperators.cpp  MutationOperators.h  ParameterBridge.cpp  ParameterBridge.h  Population.cpp  Population.h  PreferenceModel.cpp  PreferenceModel.h  SelectionOperators.cpp  SelectionOperators.h  TargetAudioManager.cpp  TargetAudioManager.h
Source/GA/Legacy/: HeadlessSynth.h
Source/JX11/: Envelope.h  Filter.h  NoiseGenerator.h  Oscillator.h  Preset.h  Synth.cpp  Synth.h  Utils.h  Voice.h
Source/UI/: GAControlsPanel.cpp  GAControlsPanel.h  PPGLookAndFeel.cpp  PPGLookAndFeel.h  SynthControlsPanel.cpp  SynthControlsPanel.h
Tests/: AudioFeatureCacheTests.cpp  GAOperatorsTests.cpp  GeneticAlgorithmTests.cpp  GenomeConstraintsTests.cpp  IndividualTests.cpp  IntegrationTests.cpp  MLPPreferenceModelTests.cpp  MLPTests.cpp  ParameterBridgeTests.cpp  PopulationTests.cpp
analysis/: compute_metrics.py
cmake/: CPM.cmake
